fixed spacing and color changed

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@
 }
 
 .App__Form {
-  width: 50%;
-  background-color: #2E4158;
+  width: 100%;
+  background-color: #015E51;
   padding: 25px 40px;
   overflow: auto;
 }
